# koan

./: .gitignore  CMakeLists.txt  README.md  koan
audio/: ADD JAP.txt
doc/: to-do.txt
img/: Gramática.docx  Kanji.docx  expressoes.docx  expressoes.txt  grammar.txt  kanji.txt
img/actionmenu/: Esquema das imagens das opcoes de movimentos.docx
img/tileset/: tilelist.txt
map/: actionMap.txt  itensMap.txt  stoneMap.txt
src/: ActionMenu.cpp  ActionMenu.h  ActionNode.cpp  ActionNode.h  Alien.cpp  Alien.h  BlockTileSet.cpp  BlockTileSet.h  BoardState.cpp  BoardState.h  Bow.cpp  Bow.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Colission.h  CustomMath.cpp  CustomMath.h  Dice.cpp  Dice.h  EndState.cpp  EndState.h  Game.cpp  Game.h  GameObject.h  Globals.h  Helmet.cpp  Helmet.h  Hud.cpp  Hud.h  InputManager.cpp  InputManager.h  Item.cpp  Item.h  Map.cpp  Map.h  Minion.cpp  Minion.h  MultiTileSet.cpp  (+52 more)
